sdk/include/ml.h

/* ========================================================================== */
/*                              CORE TYPES & UTILITIES                         */
/* ========================================================================== */

/** Plugin Id string type - plain char* for plugin id
 * @ref ml_get_device_list device must in list of plugin ids
 */
typedef const char* ml_PluginId;
/** Path string type - plain char* for file paths */
typedef const char* ml_Path;
typedef enum {
    ML_LOG_LEVEL_TRACE, /* Trace messages */
    ML_LOG_LEVEL_DEBUG, /* Debug messages */
    ML_LOG_LEVEL_INFO,  /* Informational messages */
    ML_LOG_LEVEL_WARN,  /* Warning messages */
    ML_LOG_LEVEL_ERROR  /* Error messages */
} ml_LogLevel;
/** Logging callback function type */
typedef void (*ml_log_callback)(ml_LogLevel, const char*);
/* ====================  Data Structures  ==================================== */

/** Profile data structure for performance metrics */
typedef struct {
    int64_t ttft;        /* Time to first token (us) */
    int64_t prompt_time; /* Prompt processing time (us) */
    int64_t decode_time; /* Token generation time (us) */

    int64_t prompt_tokens;    /* Number of prompt tokens */
    int64_t generated_tokens; /* Number of generated tokens */
    int64_t audio_duration;   /* Audio duration (us) */

    double prefill_speed;    /* Prefill speed (tokens/sec) */
    double decoding_speed;   /* Decoding speed (tokens/sec) */
    double real_time_factor; /* Real-Time Factor(RTF) (1.0 = real-time, >1.0 = faster, <1.0 = slower) */

    const char* stop_reason; /* Stop reason: "eos", "length", "user", "stop_sequence" */
} ml_ProfileData;
/** LLM / VLM model configuration */
typedef struct {
    int32_t n_ctx;            // text context, 0 = from model
    int32_t n_threads;        // number of threads to use for generation
    int32_t n_threads_batch;  // number of threads to use for batch processing
    int32_t n_batch;          // logical maximum batch size that can be submitted to llama_decode
    int32_t n_ubatch;         // physical maximum batch size
    int32_t n_seq_max;        // max number of sequences (i.e. distinct states for recurrent models)
    int32_t n_gpu_layers;     // number of layers to offload to GPU, 0 = all layers on CPU

    // TODO: consider removing the following fields from ModelConfig, or move to another struct
    ml_Path     chat_template_path;     // path to chat template file, optional
    const char* chat_template_content;  // content of chat template file, optional
    const char* system_prompt;          // system prompt for chat template, optional
    bool        enable_sampling;        // DEPRECATED, use enable_json in ml_SamplerConfig
    const char* grammar_str;            // grammar string
    int32_t     max_tokens;             // max tokens to generate
    bool        enable_thinking;        // enable thinking mode for Qwen models
    bool        verbose;                // verbose logging
    // For QNN
    ml_Path qnn_model_folder_path;  // path to QNN model folder, default same as model_path
    ml_Path qnn_lib_folder_path;    // path to QNN library folder, default same as model_path
} ml_ModelConfig;
/* ========================================================================== */
/*                              SPEECH RECOGNITION (ASR)                       */
/* ========================================================================== */

/* ====================  Configuration Structures  =========================== */

/** ASR processing configuration */
typedef struct {
    const char* timestamps; /* Timestamp mode: "none", "segment", "word" */
    int32_t     beam_size;  /* Beam search size */
    bool        stream;     /* Enable streaming mode */
} ml_ASRConfig;
/** ASR transcription result */
typedef struct {
    char*   transcript;        /* Transcribed text (UTF-8, caller must free with ml_free) */
    float*  confidence_scores; /* Confidence scores for each unit (caller must free with ml_free) */
    int32_t confidence_count;  /* Number of confidence scores */
    float*  timestamps;        /* Timestamp pairs: [start, end] for each unit (caller must free with ml_free) */
    int32_t timestamp_count;   /* Number of timestamp pairs */
} ml_ASRResult;
typedef struct ml_ASR ml_ASR; /* Opaque ASR handle */
/* ====================  Lifecycle Management  ============================== */

/** Input structure for creating an ASR instance */
typedef struct {
    const char*    model_name;     /** Name of the model */
    ml_Path        model_path;     /** Path to the model file */
    ml_Path        tokenizer_path; /** Path to the tokenizer file (may be NULL) */
    ml_ModelConfig config;         /** Model configuration */
    const char*    language;       /** Language code (ISO 639-1 or NULL) */
    ml_PluginId    plugin_id;      /** Plugin to use for the model */
    const char*    device_id;      /** Device to use for the model, NULL for default device */
    const char*    license_id; /** licence id for loading NPU models, must be provided upon the first use of the license
                              key. null terminated string */
    const char* license_key;   /** licence key for loading NPU models, null terminated string */
} ml_AsrCreateInput;
/**
 * @brief Create and initialize an ASR instance with language support
 *
 * @param input[in]: Input parameters for the ASR creation
 * @param out_handle[out]: Pointer to the ASR handle. Must be freed with ml_asr_destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_asr_create(const ml_AsrCreateInput* input, ml_ASR** out_handle);
/**
 * @brief Destroy ASR instance and free associated resources
 *
 * @param handle[in]: The ASR handle to destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_asr_destroy(ml_ASR* handle);
/* ====================  Transcription  ===================================== */

/** Input structure for ASR transcription */
typedef struct {
    ml_Path             audio_path; /** Path to audio file */
    const char*         language;   /** Language code (ISO 639-1 or NULL for auto-detect) */
    const ml_ASRConfig* config;     /** ASR configuration (optional, can be nullptr) */
} ml_AsrTranscribeInput;
/** Output structure for ASR transcription */
typedef struct {
    ml_ASRResult   result;       /** Transcription result (caller must free with ml_free for text fields) */
    ml_ProfileData profile_data; /** Profiling data for the transcription operation */
} ml_AsrTranscribeOutput;
/**
 * @brief Transcribe audio file to text with specified language
 *
 * @param handle[in]: ASR handle
 * @param input[in]: Input parameters for transcription (includes audio file path and language)
 * @param output[out]: Output data containing the transcription result
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_asr_transcribe(ml_ASR* handle, const ml_AsrTranscribeInput* input, ml_AsrTranscribeOutput* output);
/* ====================  Language Management  ============================== */

/** Input structure for getting supported languages */
typedef struct {
    void* reserved; /** Reserved for future use, safe to set as NULL */
} ml_AsrListSupportedLanguagesInput;
/** Output structure for getting supported languages */
typedef struct {
    const char** language_codes; /** Array of supported language codes (caller must free with ml_free) */
    int32_t      language_count; /** Number of supported languages */
} ml_AsrListSupportedLanguagesOutput;
/**
 * @brief Get list of supported languages for ASR model
 *
 * @param handle[in]: ASR handle
 * @param input[in]: Input parameters for language list query
 * @param output[out]: Output data containing the supported languages array and count
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Thread-safe
 */
ML_API int32_t ml_asr_list_supported_languages(
    const ml_ASR* handle, const ml_AsrListSupportedLanguagesInput* input, ml_AsrListSupportedLanguagesOutput* output);
/* ========================================================================== */
/*                              ASR STREAMING                                  */
/* ========================================================================== */

/* ====================  Streaming Types & Callbacks  ====================== */

/** Callback for streaming transcription updates */
typedef void (*ml_asr_transcription_callback)(const char* text, void* user_data);
/** ASR streaming configuration */
typedef struct {
    float       chunk_duration;   /* Duration in seconds for each chunk (default: 4.0) */
    float       overlap_duration; /* Overlap between chunks in seconds (default: 3.0) */
    int32_t     sample_rate;      /* Audio sample rate (default: 16000) */
    int32_t     max_queue_size;   /* Maximum chunks in processing queue (default: 10) */
    int32_t     buffer_size;      /* Audio buffer size for input (default: 512) */
    const char* timestamps;       /* Timestamp mode: "none", "segment", "word" */
    int32_t     beam_size;        /* Beam search size */
} ml_ASRStreamConfig;
/* ====================  Streaming Operations  ============================== */

/** Input structure for beginning ASR streaming */
typedef struct {
    const ml_ASRStreamConfig*     stream_config;    /** Streaming configuration (optional) */
    const char*                   language;         /** Language code (optional) */
    ml_asr_transcription_callback on_transcription; /** Required: transcription updates */
    void*                         user_data;        /** User data passed to callbacks */
} ml_AsrStreamBeginInput;
/** Output structure for streaming begin (minimal) */
typedef struct {
    void* reserved; /** Reserved for future use */
} ml_AsrStreamBeginOutput;
/**
 * @brief Begin streaming ASR with specified callbacks
 *
 * @param handle[in]: ASR handle
 * @param input[in]: Streaming callbacks configuration
 * @param output[out]: Output structure (reserved for future use)
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_asr_stream_begin(
    ml_ASR* handle, const ml_AsrStreamBeginInput* input, ml_AsrStreamBeginOutput* output);
/** Input structure for processing audio data */
typedef struct {
    const float* audio_data; /** Audio samples (float32) */
    int32_t      length;     /** Number of samples */
} ml_AsrStreamPushAudioInput;
/**
 * @brief Push audio data to streaming ASR for processing
 *
 * @param handle[in]: ASR handle
 * @param input[in]: Audio data to process
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_asr_stream_push_audio(ml_ASR* handle, const ml_AsrStreamPushAudioInput* input);
/** Input structure for stopping streaming */
typedef struct {
    bool graceful; /** If true, processes remaining audio before stopping; if false, stops immediately */
} ml_AsrStreamStopInput;
/**
 * @brief Stop streaming ASR
 *
 * @param handle[in]: ASR handle
 * @param input[in]: Stop configuration (graceful vs immediate)
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_asr_stream_stop(ml_ASR* handle, const ml_AsrStreamStopInput* input);